[package]
name = "ipnotifier"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
external-ip = "4.1.0"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
slack-hook = "0.8.0"
reqwest = "0.11.6"
chrono = "0.4.19"